# vets-anni

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  architecture.md  colourblind.md  data_model.md  deployment.md  domain_rules.md  integration.md  snapshot_integration.md  spec.md  ws_protocol.md
.claude/ephemeral/: README.md
app/: __init__.py  constants.py  settings.py
app/bot/: __init__.py  client.py
app/db/: __init__.py  bootstrap.py  config.py  lifecycle.py  models.py
app/domain/: __init__.py  anni_prediction.py  attendance.py  buckets.py  capability.py  colourblind.py  identity.py  membership.py  presence.py  regions.py  roles.py  rsvp.py  rsvp_by_uuid.py  schedule.py  snapshot.py
app/services/: __init__.py  anni_ping_poller.py  api_disabled.py  auto_promoter.py  dazebot_client.py  guild_refresh_poller.py  hot_window.py  lifecycle_task.py  loop.py  mojang.py  online_merge.py  party_status_poller.py  presence_poller.py  snapshot_notifier.py  snapshot_signal_handlers.py  staff_poller.py  stamp_poller.py  state.py  tempserver.py  wapi.py  weapons_poller.py
app/web/: __init__.py  auth.py  board_view.py  deps.py
docker/: Dockerfile  entrypoint.sh
migrations/models/: 0_20260518004944_init.py  0_20260518012837_init.py  0_20260526075818_init.py  1_20260518200659_add_preferred_regions.py  1_20260527074359_add_player_is_placeholder.py  3_20260615081309_add_anni_event_ping.py  (+2 more)
scripts/: seed_dev.py
templates/: base.html
tests/: conftest.py  test_anni_cog.py  test_anni_party_observation.py  test_attendance.py  test_auth_flow.py  test_auto_promoter.py  test_board_smoke.py  test_board_view.py  test_buckets.py  test_capability.py  test_colourblind.py  test_dashboard_smoke.py  test_guess_cog.py  test_guild_refresh_poller.py  test_hot_window.py  test_identity.py  test_lifecycle.py  test_loop.py  test_membership.py  test_online_merge.py  test_party_status_poller.py  test_presence.py  test_presence_poller.py  test_regions.py  test_rsvp.py  test_rsvp_by_uuid.py  test_seed_invariants.py  test_settings.py  test_snapshot_organisers.py  test_wapi.py  test_web_smoke.py  test_ws.py
(+44 files in other folders)
